<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ContentDescription"
    android:background="#eeeeee"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/home"
            android:onClick="navclick"
            android:text="@string/home"
            android:background="@drawable/home_base"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="bottom|center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/chatting"
            android:onClick="navclick"
            android:text="@string/chatting"
            android:background="@drawable/chatting_base"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="bottom|center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/forum"
            android:onClick="navclick"
            android:text="@string/forum"
            android:background="@drawable/forum_base"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="bottom|center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/list"
            android:onClick="navclick"
            android:text="@string/list"
            android:background="@drawable/list_base"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="bottom|center"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/recommend"
            android:onClick="navclick"
            android:text="@string/recommend"
            android:background="@drawable/recommend_base"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="bottom|center"
            android:textSize="12sp"/>

    </LinearLayout>





</LinearLayout>