<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#00ffcc"
    android:padding="8dp"
    tools:ignore="HardcodedText,ContentDescription,UseCompoundDrawables"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:src="@drawable/yellowduck"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="19"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textColor="#fff"
            android:text="黄晶晶" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="50dp"
            android:src="@drawable/exampe_er" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#fff"
        android:padding="10dp"
        android:text="个性签名"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/myfriend"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/myfriend"
                android:textColor="#fff"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/myclothing"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/myclothing"
                android:textColor="#fff"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/mycharm"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mycharm"
                android:textColor="#fff"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/myroom"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/myroom"
                android:textColor="#fff"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/mycollect"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mycollect"
                android:gravity="center_vertical"
                android:textColor="#fff"
                android:textSize="17sp"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/setting"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/setting"
                android:textSize="17sp"
                android:textColor="#fff"
                android:gravity="center_vertical"
                android:background="#0000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/night"/>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/night"
                android:textColor="#fff"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:background="#0000" />

        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp" />


    </LinearLayout>
</LinearLayout>